welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: not found: type Boole
  var e1:Boole =false
         ^